Implemented namespace, class and closing tag parsing, need to figure out how to parse function declarations

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -50,6 +50,9 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <None Include="TestCode.mek">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <Compile Include="TokenizerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
